# bluewhale-backend-daemon

./: Cargo.toml  README.md
crates/cli/: Cargo.toml  README.md
crates/cli/src/: config.rs  lib.rs  main.rs
crates/daemon/: Cargo.toml  README.md
crates/daemon/src/: config.rs  lib.rs  main.rs
crates/daemon/src/api/backend/: get.rs  mod.rs  put.rs  restart.rs  start.rs  stop.rs
