[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
flate2 = "1.0.30"
reqwest = { version = "0.12.4", features = ["blocking", "multipart"], default-features = false }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
tar = "0.4.40"
