[package]
name = "daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
time = { version = "0.3.36", features = ["local-offset"] }

axum = { version = "0.7.5", features = ["multipart"] }
tokio = { version = "1.37.0", features = ["process", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["time"] }
